--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@ img {
 }
 
 /* Base*/
+html {
+  scroll-behavior: smooth;
+}
 body {
   font: 400 1rem 'DM Sans', sans-serif;
   color: var(--text-color);
@@ -68,9 +71,20 @@ body {
   height: 1px;
   background: linear-gradient(
     270deg,
-    hsla(var(--hue), 36%, 57%, 1) 0% hsla(var(--hue), 65%, 88%, 0.34) 100%
+    hsla(var(--hue), 36%, 57%, 1),
+    hsla(var(--hue), 65%, 88%, 0.34)
   );
 }
+
+.divider-2 {
+  height: 1px;
+  background: linear-gradient(
+    270deg,
+    hsla(var(--hue), 65%, 88%, 0.34),
+    hsla(var(--hue), 36%, 57%, 1)
+  );
+}
+
 /* lAYOUT */
 .container {
   margin-left: 1.5rem;
@@ -83,6 +97,15 @@ body {
 .section {
   padding: 5rem 0;
 }
+.section .title {
+  margin-bottom: 1rem;
+}
+.section header {
+  margin-bottom: 4rem;
+}
+.section header strong {
+  color: var(--base-color);
+}
 #header {
   border-bottom: 1px solid #e4e4e4;
   margin-bottom: 2rem;
@@ -94,6 +117,11 @@ body {
   background-color: var(--body-color);
   width: 100%;
 }
+
+#header.scroll {
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
+}
+
 main {
   margin-top: calc(var(--header-height) + 2rem);
 }
@@ -140,6 +168,11 @@ nav ul li a:hover::after {
 nav .menu {
   opacity: 0;
   visibility: hidden;
+  top: -20rem;
+  transition: 0.2s;
+}
+nav .menu ul {
+  display: none;
 }
 /* MOSTRAR MENU */
 nav.show .menu {
@@ -151,13 +184,38 @@ nav.show .menu {
   position: fixed;
   top: 0;
   left: 0;
-}
-nav.show .menu {
   display: grid;
   place-content: center;
 }
+
 nav.show ul.grid {
   gap: 4rem;
+}
+
+nav.show .menu ul {
+  display: grid;
+}
+
+/* Toggle Menu */
+.toggle {
+  color: var(--base-color);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+nav .icon-close {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: -1.5rem;
+  right: 1.5rem;
+  transition: 0.2s;
+}
+
+nav.show div.icon-close {
+  visibility: visible;
+  opacity: 1;
+  top: 1.5rem;
 }
 /* Home */
 #home {
@@ -198,4 +256,60 @@ nav.show ul.grid {
 }
 #home .text p {
   margin-bottom: 2rem;
+}
+
+/* About */
+#about {
+  background: white;
+}
+#about .container {
+  margin: 0;
+}
+#about .image {
+  position: relative;
+}
+#about .image::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  background: var(--base-color-second);
+  position: absolute;
+  top: -8.3%;
+  left: -33%;
+  z-index: 0;
+}
+
+#about .image img {
+  position: relative;
+}
+#about .image img,
+#about .image::before {
+  border-radius: 0.25rem;
+}
+#about .text {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+/* Services */
+.cards.grid {
+  gap: 1.5rem;
+}
+
+.card {
+  padding: 3.625rem 2rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-bottom: 0.25rem solid var(--base-color);
+  border-radius: 0.25rem 0.25rem 0 0;
+  text-align: center;
+}
+.card i {
+  display: block;
+  margin-bottom: 1.5rem;
+  font-size: 5rem;
+  color: var(--base-color);
+}
+.card .title {
+  font-size: 1.5rem;
+  margin-bottom: 0.75rem;
 }
