--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?13dyqi');
-  src:  url('fonts/icomoon.eot?13dyqi#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?13dyqi') format('truetype'),
-    url('fonts/icomoon.woff?13dyqi') format('woff'),
-    url('fonts/icomoon.svg?13dyqi#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?i9lj6k');
+  src:  url('fonts/icomoon.eot?i9lj6k#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?i9lj6k') format('truetype'),
+    url('fonts/icomoon.woff?i9lj6k') format('woff'),
+    url('fonts/icomoon.svg?i9lj6k#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-arrow-up:before {
+  content: "\e90c";
+}
 .icon-phone:before {
   content: "\e900";
 }
